--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -3,13 +3,13 @@
   margin: 0 auto;
   padding: 110px 0 100px;
   background-color: #cedfef;
-  background-image: url("../img/adventages.webp");
+  background-image: url("../img/advantages.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 
   @media (min-width: $vp-1024) and (min-resolution: $retina-dppx) {
-    background-image: url("../img/adventages@2x.webp");
+    background-image: url("../img/advantages@2x.webp");
   }
 
   @include vp-1023 {
