--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,7 +19,7 @@
 @import "blocks/site-list";
 @import "blocks/main-block";
 @import "blocks/directions";
-@import "blocks/adventages";
+@import "blocks/advantages";
 @import "blocks/cruises";
 @import "blocks/booking";
 @import "blocks/form";
