--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -97,6 +97,10 @@
   }
 }
 
+.advantages__item:hover {
+  background-color: rgba($color: $color-default-black, $alpha: 0.25);
+}
+
 .advantages__item--desktop {
   padding-right: 45px;
 
