--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -29,10 +29,7 @@
 .main-header__link-logo {
   display: block;
   padding: 35px 0;
-
-  & .main-header__logo {
-    fill: $color-default-white;
-  }
+  color: $color-default-white;
 
   @include vp-1023 {
     padding: 30px 0;
@@ -65,10 +62,7 @@
 .main-header__link-logo--opened-mobile {
   @include vp-767 {
     left: 35px;
-
-    & .main-header__logo {
-      fill: $color-default-black;
-    }
+    color: $color-default-black;
   }
 }
 
@@ -76,8 +70,8 @@
   @include vp-767 {
     position: relative;
 
-    & .main-header__logo {
-      fill: $color-default-black;
+    .main-header__logo {
+      color: $color-default-black;
     }
 
     & .main-nav__list {
