--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -33,7 +33,6 @@
 .main-footer__logo {
   width: 70px;
   height: 38px;
-  fill: $color-default-white;
 
   @include vp-1023 {
     width: 38px;
@@ -59,6 +58,7 @@
   width: 70px;
   height: 38px;
   margin: auto 0;
+  color: $color-default-white;
 
   @include vp-1023 {
     width: 38px;
