--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -59,6 +59,14 @@
   }
 }
 
+.main-header__logo:hover {
+  opacity: 0.8;
+}
+
+.main-header__logo:active {
+  opacity: 0.4;
+}
+
 .main-header__link-logo--opened-mobile {
   @include vp-767 {
     left: 35px;
