--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -57,6 +57,12 @@
   .main-nav--nojs .main-nav__wrapper {
     position: relative;
     display: block;
+
+    .main-nav__list {
+      position: relative;
+      top: 25px;
+      left: 0;
+    }
   }
 }
 
