--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -28,12 +28,8 @@
 
 .main-header__link-logo {
   display: block;
-  padding: 35px 0;
+  padding: 0;
   color: $color-default-white;
-
-  @include vp-1023 {
-    padding: 30px 0;
-  }
 
   @include vp-767 {
     position: absolute;
