--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,42 +1,48 @@
-.social {
-  padding-top: 11px;
-
-  @include vp-1023 {
-    padding: 5px 0 0;
-  }
-
-  @include vp-767 {
-    margin: 0 auto 0 0;
-  }
-}
-
 .social__list {
   display: grid;
-  grid-template-columns: repeat(3, 20px);
-  grid-template-rows: auto;
-  gap: 26px;
+  grid-template-columns: repeat(3, 40px);
+  min-height: auto;
   margin: 0;
   padding: 0;
 
   @include vp-1023 {
-    grid-template-columns: 12px 16px 16px;
-    gap: 22px;
+    grid-template-columns: repeat(3, 35px);
   }
 
   @include vp-767 {
-    gap: 21px;
+    grid-template-columns: repeat(3, 31px);
   }
 }
 
 .social__item {
   display: block;
+  width: 40px;
+  height: 40px;
   list-style-type: none;
+
+  @include vp-1023 {
+    width: 35px;
+    height: 30px;
+  }
+
+  @include vp-767 {
+    width: 25px;
+    height: 25px;
+  }
 }
 
 .social__link {
   display: block;
   margin: 0;
-  padding: 0;
+  padding: 10px 12px;
+
+  @include vp-1023 {
+    padding: 5px 12px 9px;
+  }
+
+  @include vp-767 {
+    padding: 5px 0 4px;
+  }
 }
 
 .social__link:hover .social__icon {
@@ -51,7 +57,6 @@
   display: block;
   width: 20px;
   height: 20px;
-  margin: 0 auto;
   fill: $color-default-white;
 
   @include vp-1023 {
@@ -64,11 +69,31 @@
   width: 12px;
 
   @include vp-1023 {
-    width: 10px;
-    margin: 0 0 0 auto;
+    position: relative;
+    left: 3px;
   }
 
   @include vp-767 {
-    margin: 0 auto 0 0;
+    left: 0;
+  }
+}
+
+.social__icon--dzen {
+  @include vp-1023 {
+    position: relative;
+    left: 3px;
+  }
+
+  @include vp-767 {
+    left: 1px;
+  }
+}
+
+.social__icon--reddit {
+  position: relative;
+  left: 7px;
+
+  @include vp-767 {
+    left: 9px;
   }
 }
